# csci598-final

./: Dockerfile  README.md  db.sqlite3  local.sh  nginx.conf  package.json  pyproject.toml  start.sh
.devcontainer/: devcontainer.json  requirements.txt
backend/: Dockerfile  README.md  pyproject.toml  start.sh
backend/final/: settings.py  urls.py
backend/reststop_rater/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
final/: settings.py  urls.py
frontend/: README.md  about.html  index.html  package.json  vite.config.ts
frontend/src/: About.tsx  App.tsx  Home.tsx  Navbar.tsx  api.ts  index.tsx
reststop_rater/: forms.py  urls.py
reststop_rater/migrations/: 0004_bathroom_gmaps_id.py  0005_alter_bathroom_gmaps_id.py  0006_bathroom_photo_url.py  0007_bathroom_report_no_bathroom_report_yes.py  0008_bathroom_quick_rate.py  0009_alter_bathroom_name.py  0010_alter_bathroom_name_alter_bathroom_photo_url.py
reststop_rater/models/: bathroom.py  review.py
reststop_rater/services/: auth.py  bathroom.py  gmapsapi.py
reststop_rater/templates/: about.html  apitest.html  bathroom.html  bathroom_detail.html  bathroomdetail.html  createbathroom.html  home.html  index.html  join.html  login.html  nearby.html  reviewbathroom.html
reststop_rater/viewmodels/: review.py
reststop_rater/views/: apitest.py  bathroom.py  bathrooms.py  home.py  login.py  nearby.py  (+1 more)
static/: copy.js  maps.js  rating.js  styles.css
staticfiles/: bathroom.css  copy.js  maps.js  rating.js  style.css
templates/: base_generic.html  gmapstest.html  includes.html  navbar.html
(+42 files in other folders)
