[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.2",
    "django-bootstrap5>=25.1",
    "djangorestframework",
    "djangorestframework-simplejwt",
    "django-cors-headers",
    "requests>=2.32.3",
    "psycopg2-binary>=2.9.10",
    "gunicorn>=23.0.0",
]
